[fix] Dockerfile use full jdk