@@ -1,42 +1,13 @@
-# base image to build a JRE
-FROM amazoncorretto:25-alpine3.22 AS corretto-jdk
+FROM amazoncorretto:25-alpine
 
-# required for strip-debug to work
-RUN apk add --no-cache binutils
-
-# Build small JRE image
-RUN "$JAVA_HOME/bin/jlink" \
-    --module-path "$JAVA_HOME/jmods" \
-    --add-modules java.se \
-    --strip-debug \
-    --no-man-pages \
-    --no-header-files \
-    --compress=2 \
-    --output /customjre
-
-FROM alpine:3.22
-ENV JAVA_HOME=/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-
-# copy JRE from the base image
-COPY --from=corretto-jdk /customjre $JAVA_HOME
-
-# add curl for health docker
-RUN apk --no-cache add curl
-
-# Add app user & Configure working directory
-ARG APPLICATION_USER=appuser
-RUN adduser --no-create-home -u 1000 -D $APPLICATION_USER && \
-    mkdir /app && \
-    chown -R $APPLICATION_USER /app
-
-USER 1000
+# Set working directory
 WORKDIR /app
-
-# After helper
 
 ARG JAR_FILE=target/market-*.jar
 COPY ${JAR_FILE} app.jar
 
+# Expose default Spring Boot port
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+# Run the application
+ENTRYPOINT ["java","-jar","app.jar"]
